--- a/index.html
+++ b/index.html
@@ -333,9 +333,22 @@
                     <h3>Accelerate Program Intern</h3>
                     <h4>USAA</h4>
                     <ul>
-                      <li></li>
-                      <li></li>
-                      <li></li>
+                      <li>
+                        Selected for a highly competitive 4-week internship,
+                        rotating through business and IT departments at a
+                        Fortune 100 financial services company
+                      </li>
+                      <li>
+                        Completed 5+ professional development workshops (mock
+                        interviewing, resume building, personal branding) and
+                        expanded network through mentorship with senior
+                        engineers and cross-functional teams
+                      </li>
+                      <li>
+                        Led a capstone project analyzing and presenting IT
+                        department solutions to deliver findings and actionable
+                        recommendations to USAA leadership
+                      </li>
                     </ul>
                   </div>
                 </div>
@@ -407,20 +420,24 @@
           <button class="filter-btn active" data-filter="all">All</button>
           <button class="filter-btn" data-filter="mobile">Mobile</button>
           <button class="filter-btn" data-filter="web">Web</button>
-          <button class="filter-btn" data-filter="education">Education</button>
+          <button class="filter-btn" data-filter="">AI</button>
         </div>
 
         <div class="row projects-container">
           <!-- IBC Marketplace -->
           <div
-            class="col-lg-6 col-md-6 project-item ai web education"
+            class="col-lg-6 col-md-6 project-item web"
             data-aos="zoom-in"
           >
             <div class="project-card">
               <div class="project-card-inner">
                 <div class="project-card-front">
                   <div class="project-img">
-                    <img src="/images/New-IBC-Logo-1.png" alt="" class="img-fluid" />
+                    <img
+                      src="/images/New-IBC-Logo-1.png"
+                      alt=""
+                      class="img-fluid"
+                    />
                     <div class="project-category">Web</div>
                   </div>
                   <div class="project-info">
@@ -437,17 +454,16 @@
                 <div class="project-card-back">
                   <h3>IBC Marketplace</h3>
                   <p>
-                    Developed a full-stack
-                    e-commerce web application that served over 500+ users and
-                    processed more than $1,000 in transactions as part of BYU-Idaho's Integrated Business Core (IBC)—a
-                    hands-on, interdisciplinary program where students launch
-                    and operate real businesses.
+                    Developed a full-stack e-commerce web application that
+                    served over 500+ users and processed more than $1,000 in
+                    transactions as part of BYU-Idaho's Integrated Business Core
+                    (IBC)—a hands-on, interdisciplinary program where students
+                    launch and operate real businesses.
                   </p>
                   <p>
                     The platform streamlined the online shopping experience for
                     our student-run business by integrating Stripe for secure
-                    payment processing and user authentication, which reduced
-                    checkout times by 30%.
+                    payment processing and user authentication.
                   </p>
                 </div>
               </div>
@@ -455,7 +471,7 @@
           </div>
           <!-- Project GYM -->
           <div
-            class="col-lg-6 col-md-6 project-item mobile ai design education ux"
+            class="col-lg-6 col-md-6 project-item mobile ai"
             data-aos="zoom-in"
             data-aos-delay="700"
           >
@@ -463,29 +479,24 @@
               <div class="project-card-inner">
                 <div class="project-card-front">
                   <div class="project-img">
-                    <img
-                      src=""
-                      alt="Project GYM"
-                      class="img-fluid"
-                    />
+                    <img src="/images/white-question-mark.png" alt="Project GYM" class="img-fluid" />
                     <div class="project-category">Mobile App</div>
                   </div>
                   <div class="project-info">
                     <h3>Project GYM</h3>
                     <div class="tech-stack">
-                      <span>Mobile Design</span>
-                      <span>Fitness Tech</span>
+                      <span>Java</span>
+                      <span>Spring Boot</span>
+                      <span>React</span>
+                      <span>PostgreSQL</span>
+                      <span>AI</span>
                     </div>
                   </div>
                 </div>
                 <div class="project-card-back">
                   <h3>Project GYM</h3>
-                  <p>
-                    Currently under development.
-                  </p>
-                  <p>
-                    Will update soon.
-                  </p>
+                  <p>Currently under development.</p>
+                  <p>Will update soon.</p>
                   <div class="project-links">
                     <a href="" class="btn btn-sm btn-outline-light"
                       ><i class="fas fa-external-link-alt"></i> View Project</a
@@ -649,7 +660,7 @@
                       <a
                         href="https://www.linkedin.com/in/ethantrent/"
                         target="_blank"
-                        >@EthanTrent</a
+                        >@ethantrent</a
                       >
                     </p>
                   </div>
