--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
         <div class="education-card" data-aos="flip-up">
           <div class="education-logo">
             <img
-              src="/images/Brigham_Young_University–Idaho_logo.svg.png"
+              src="images/Brigham_Young_University-Idaho_logo.svg.png"
               alt="Brigham Young University - Idaho Logo"
               class="img-fluid"
             />
@@ -434,7 +434,7 @@
                 <div class="project-card-front">
                   <div class="project-img">
                     <img
-                      src="/images/New-IBC-Logo-1.png"
+                      src="images/New-IBC-Logo-1.png"
                       alt=""
                       class="img-fluid"
                     />
@@ -479,7 +479,7 @@
               <div class="project-card-inner">
                 <div class="project-card-front">
                   <div class="project-img">
-                    <img src="/images/white-question-mark.png" alt="Project GYM" class="img-fluid" />
+                    <img src="images/white-question-mark.png" alt="Project GYM" class="img-fluid" />
                     <div class="project-category">Mobile App</div>
                   </div>
                   <div class="project-info">
